--- a/layout/ControleTI.ui
+++ b/layout/ControleTI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1154</width>
+    <width>1100</width>
     <height>680</height>
    </rect>
   </property>
@@ -175,7 +175,7 @@
                 </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-image: url(:/barr/IconLogo.png);
+                <string notr="true">background-image: url(:/cad/login/LOGOQ.png);
 background-position:center;
 background-repeat: no-repeat;
 </string>
@@ -401,15 +401,12 @@ QPushButton:pressed {
            </spacer>
           </item>
           <item>
-           <widget class="QFrame" name="frame_Pesquisar">
-            <property name="maximumSize">
+           <widget class="QFrame" name="frame_69">
+            <property name="minimumSize">
              <size>
-              <width>347</width>
-              <height>41</height>
+              <width>200</width>
+              <height>0</height>
              </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color:  rgb(238, 238, 238);</string>
             </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
@@ -417,87 +414,49 @@ QPushButton:pressed {
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
-             <property name="spacing">
-              <number>0</number>
-             </property>
-             <property name="leftMargin">
-              <number>4</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
-              <number>0</number>
-             </property>
+            <layout class="QVBoxLayout" name="verticalLayout_45">
              <item>
-              <widget class="QLineEdit" name="lineEdit_pesquisar">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="font">
-                <font>
-                 <family>Asap</family>
-                 <pointsize>14</pointsize>
-                </font>
+              <widget class="QLabel" name="label_68">
+               <property name="minimumSize">
+                <size>
+                 <width>200</width>
+                 <height>0</height>
+                </size>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: rgb(238, 238, 238);
-border: 0px</string>
+                <string notr="true">color: rgb(0, 161, 148);</string>
                </property>
                <property name="text">
-                <string/>
+                <string>Versão - BETA08112022</string>
                </property>
-               <property name="cursorPosition">
-                <number>0</number>
-               </property>
-               <property name="placeholderText">
-                <string>Pesquisar</string>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_Pesquisar">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>43</width>
-                 <height>36</height>
-                </size>
-               </property>
-               <property name="font">
-                <font>
-                 <family>Asap</family>
-                </font>
-               </property>
+              <widget class="QLabel" name="label_69">
                <property name="styleSheet">
-                <string notr="true">QPushButton {
-	background-image: url(:/barr/IconPesquisar.png);
-	background-position:center;
-	background-repeat: no-repeat;
-	background-color: rgb(238, 238, 238);
-	border: 1px solid;
-	
-	border-color:  rgb(238, 238, 238);
-}
-QPushButton:hover {
-	background-image: url(:/barr/IconPesquisar1.png);
-	background-color: rgb(243, 243, 243);
-}
-QPushButton:pressed {
-	background-color: rgb(226, 226, 226);
-}</string>
+                <string notr="true">color: rgb(0, 161, 148);</string>
+               </property>
+               <property name="text">
+                <string>BEM-VINDO</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_95">
+               <property name="styleSheet">
+                <string notr="true">color: rgb(0, 161, 148);</string>
+               </property>
+               <property name="text">
+                <string>-------------</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
@@ -505,12 +464,22 @@ QPushButton:pressed {
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="frame_perfil">
+           <widget class="QFrame" name="frame">
+            <property name="minimumSize">
+             <size>
+              <width>65</width>
+              <height>65</height>
+             </size>
+            </property>
             <property name="maximumSize">
              <size>
-              <width>80</width>
-              <height>16777215</height>
+              <width>66</width>
+              <height>66</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(239, 239, 239);
+border-radius: 32px</string>
             </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
@@ -518,34 +487,6 @@ QPushButton:pressed {
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <layout class="QGridLayout" name="gridLayout">
-             <item row="0" column="0">
-              <widget class="QFrame" name="frame">
-               <property name="minimumSize">
-                <size>
-                 <width>52</width>
-                 <height>52</height>
-                </size>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>52</width>
-                 <height>52</height>
-                </size>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">background-color: rgb(239, 239, 239);
-border-radius: 25px</string>
-               </property>
-               <property name="frameShape">
-                <enum>QFrame::StyledPanel</enum>
-               </property>
-               <property name="frameShadow">
-                <enum>QFrame::Raised</enum>
-               </property>
-              </widget>
-             </item>
-            </layout>
            </widget>
           </item>
          </layout>
@@ -983,7 +924,7 @@ QPushButton:pressed {
              <string notr="true">background-color: rgb(0, 161, 148);</string>
             </property>
             <property name="currentIndex">
-             <number>5</number>
+             <number>8</number>
             </property>
             <widget class="QWidget" name="pageHome">
              <widget class="QSplitter" name="splitter_199">
@@ -4688,7 +4629,6 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/celpress.png);
 background-color: rgb(0, 64, 74);
 }
 </string>
@@ -4729,7 +4669,7 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/deskpress.png);
+
 background-color: rgb(0, 64, 74);
 
 
@@ -4771,7 +4711,6 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/notepress.png);
 background-color: rgb(0, 64, 74);
 
 }
@@ -4812,7 +4751,7 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/mopress.png);
+
 background-color: rgb(0, 64, 74);
 
 
@@ -4854,7 +4793,7 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/peripress.png);
+
 background-color: rgb(0, 64, 74);
 
 }
@@ -4895,7 +4834,7 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/winpress.png);
+
 background-color: rgb(0, 64, 74);
 
 
@@ -4937,7 +4876,7 @@ background-color: rgb(1, 87, 100);
 }
 
 QPushButton:pressed{
-background-image: url(:/novo/Controle/novo/offpress.png);
+
 background-color: rgb(0, 64, 74);
 
 
